--- a/book.bib
+++ b/book.bib
@@ -17,3 +17,70 @@
  month = {jan},
  isbn = {0321965515}
 }
+
+@book{genekim2016,
+ Author = {Gene Kim},
+ title = {The DevOps Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations},
+ description = {The DevOps Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations (Book, 2016)},
+ publisher = {IT Revolution Press},
+ interhash = {2a24773a5d228001d0f18fbad40f7d75},
+ intrahash = {f2639d2493a5a3bb5664d7b95f7de9cb},
+ year = {2016},
+ month = {oct},
+ isbn = {1942788002},
+ url = {https://www.xarg.org/ref/a/1942788002/}
+}
+
+@misc{rockerverse,
+Author = {Daniel Nüst and Dirk Eddelbuettel and Dom Bennett and Robrecht Cannoodt and Dav Clark and Gergely Daroczi and Mark Edmondson and Colin Fay and Ellis Hughes and Lars Kjeldgaard and Sean Lopp and Ben Marwick and Heather Nolis and Jacqueline Nolis and Hong Ooi and Karthik Ram and Noam Ross and Lori Shepherd and Péter Sólymos and Tyson Lee Swetnam and Nitesh Turaga and Charlotte Van Petegem and Jason Williams and Craig Willis and Nan Xiao},
+Title = {The Rockerverse: Packages and Applications for Containerization with R},
+Year = {2020},
+Eprint = {arXiv:2001.10641},
+}
+
+@book{hadleywickham2017,
+ Author = {Hadley Wickham and Garrett Grolemund},
+ title = {R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
+ description = {R for Data Science: Import, Tidy, Transform, Visualize, and Model Data (Book, 2017)},
+ publisher = {O'Reilly Media},
+ interhash = {9efb24f0eb2290a0e399b5a26ac16d1d},
+ intrahash = {9ae7940e660ee0380a9fd2f267e12014},
+ year = {2017},
+ month = {jan},
+ isbn = {1491910399},
+ url = {https://www.xarg.org/ref/a/1491910399/}
+}
+
+@article{RJ-2017-065,
+  author = {Carl Boettiger and Dirk Eddelbuettel},
+  title = {{An Introduction to Rocker: Docker Containers for R}},
+  year = {2017},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2017-065},
+  url = {https://doi.org/10.32614/RJ-2017-065},
+  pages = {527--536},
+  volume = {9},
+  number = {2}
+}
+
+@book{hadleywickham2019,
+ Author = {Hadley Wickham},
+ title = {Advanced R, Second Edition (Chapman & Hall/CRC The R Series)},
+ description = {Advanced R, Second Edition (Chapman & Hall/CRC The R Series) (Book, 2019)},
+ publisher = {Chapman and Hall/CRC},
+ interhash = {06d9e4e24182a4cb91e13c6ec2909395},
+ intrahash = {70a24051a2cb04d39ffe5baf4c0bb85e},
+ year = {2019},
+ month = {jun},
+ isbn = {0815384572},
+ url = {https://www.xarg.org/ref/a/0815384572/}
+}
+
+@book{colingillespie2017,
+ Author = {Colin Gillespie and Robin Lovelace},
+ title = {Efficient R programming},
+ publisher = {O'Reilly Media, Inc, USA},
+ year = {2017},
+ month = {apr},
+ isbn = {0131429019}
+}
