fixed bad footnote rendering

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -93,8 +93,8 @@ In a perfect world, you will be creating one vignette per shiny page/tab.
 - Functions documentation.
 Every function in your package should come with its own documentation, even if only for your future self. 
 "Exported" functions, the one which are available once you do `library(myapp)`, should be fully documented: they are the one that will be listed in the package help page. 
-The internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions^[
-`{roxygen2}` comes with a `@noRd` tag, that prevents the documentation from being built. 
+The internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions
+^[`{roxygen2}` comes with a `@noRd` tag, that prevents the documentation from being built. 
 This allows to stillwrite the documentation using the same tags as the exported function, without the internal functions being documented in the end package. 
 For example, that is why by default the modules built with `{golem}` version > 0.2.0 come with `@noRd`: you should document them, but chances are your do not need to export them.
 ].
@@ -107,7 +107,7 @@ __Nothing should go to production without being tested. Nothing.__
 
 Testing production apps is a wide question and we will come back to this question in another chapter, but let's talk briefly about why using a package structure helps with testing.
 
-Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the "Shiny App as a Package" strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like `{testthat}` [@R-testthat2011]. 
+Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the "Shiny App as a Package" strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like `{testthat}` [@R-testthat]. 
 Learning how to use it is not the subject of this chapter, so feel free to refer to the documentation, and see also Chapter 5 of the [workshop: "Building a package that lasts"](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop?slide=107). 
 
 We will come back to testing in the "Build Yourself a Safety Net" chapter.
@@ -275,8 +275,8 @@ Then, how do we refactor the partially repetitive piece of code so that it is re
 Yes, you guessed right: using shiny modules. 
 Shiny modules aim at three things: simplifying "id" namespacing, split the code base into a series of functions, and allow UI/Server parts of your app to be reused. 
 Most of the time, modules are used to do the two first.
-In our case, we could say that 90% of the module we write are never reused^[
-Most of the time, pieces / panels of the app are too unique to be reused elsewhere.
+In our case, we could say that 90% of the module we write are never reused
+^[Most of the time, pieces / panels of the app are too unique to be reused elsewhere.
 ] ; they are here to allow us to split the code base into smaller, more manageable pieces. 
 
 With Shiny modules, you will be writing a combination of UI and server functions. 
@@ -370,8 +370,8 @@ ns("choice")
 
 And here it is, our namespaced `id`.
 
-Each call to a module with `callModule()` requires a different `id` argument that will allow creating various internal namespaces, preventing from id conflicts^[
-Well, of course you can still have inner module id conflicts, but they are easier to avoid, detect, and fix. 
+Each call to a module with `callModule()` requires a different `id` argument that will allow creating various internal namespaces, preventing from id conflicts
+^[Well, of course you can still have inner module id conflicts, but they are easier to avoid, detect, and fix. 
 ].
 Then you can have as many `validate` input as you want in your app, as long as this `validate` has a unique id inside your module.
 
