--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -115,8 +115,8 @@ When you start your project with `{golem}`, this folder is pre-populated with th
 
 During the process of building your application, all the core functionalities  of your app will be stored in the `R/` directory.
 Note that these files are the "core" functionalities of your application itself, and that other .R files also exists.
-For example, when you will need to deploy your application on RStudio platforms, `{golem}` will create an `app.R` at the root of your directory^[
-`{golem}` wîll automatically add this file to the `.Rbuildignore` file.
+For example, when you will need to deploy your application on RStudio platforms, `{golem}` will create an `app.R` at the root of your directory
+^[`{golem}` wîll automatically add this file to the `.Rbuildignore` file.
 ]. 
 This file should not go into the `R/` folder, as it is not in the core of the package mechanic. 
 The `dev/` folder also contains `.R` scripts, and they are inside this folder as they should not live inside the `R/` folder: they are utilitarian files for development, not core functionalities of your application.
@@ -188,8 +188,8 @@ readLines("golex/R/run_app.R") %>%
   glue::as_glue()
 ```
 
-The `run_app()` function is the one that you will use to launch the app^[
-Very technically speaking, it is the `print()` from the object outputed by `run_app()` that launches the app, but this is another story. 
+The `run_app()` function is the one that you will use to launch the app
+^[Very technically speaking, it is the `print()` from the object outputed by `run_app()` that launches the app, but this is another story. 
 ].
 
 The body of this function is wrapped inside `with_golem_options()`, which allows you to pass arguments to the `run_app()` function, which will later be callable with `golem::get_golem_options()`. 
@@ -310,8 +310,8 @@ The idea is also that the `golem-config.yml` file is shareable across `{golem}` 
 ### `inst/app/www/`
 
 The `inst/app/www/` folder contains all files that are made available __at application run time__. 
-Any web application has external files that allow it to run^[
-Some webpages do not need any external sources, as they do not have any design and are plain HTML, but generally speaking we will not call this format a web application. 
+Any web application has external files that allow it to run
+^[Some webpages do not need any external sources, as they do not have any design and are plain HTML, but generally speaking we will not call this format a web application. 
 ]. 
 For example, `{shiny}` and its `fluidPage()` function bundles a series of CSS and JavaScript files, notably the `Boostrap` library, or `jQuery`. 
 These external files enhance your app: CSS for the design part and JavaScript for the interactive part (more or less). 
