--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -6,10 +6,8 @@ Let's state the truth: no matter how complex and innovative your back-end is, yo
 That's the hard truth. 
 
 We have a natural tendency, as R-coders, to be focused on the back-end, i.e the server part of the application^[aka what happens in the server side of a Shiny App]. 
-Which is perfectly normal—chances are you did not come to R to design front-ends^[
-Front-end are the visual parts of your application, the one your user interacts with, as opposed to the back-end, which is what is installed on the server, the part the end user does not see. 
-In Shiny, front-end is what correspond to the UI, back-end to the server.
-]. 
+Which is perfectly normal—chances are you did not come to R to design front-ends^[Front-end are the visual parts of your application, the one your user interacts with, as opposed to the back-end, which is what is installed on the server, the part the end user does not see. 
+In Shiny, front-end is what correspond to the UI, back-end to the server.]. 
 
 However, if people can not understand how to use your application, or if your application front-end does not work at all, your application is not successful, no matter how innovative and incredible the computation algorithms in the back-end are.
 
@@ -214,13 +212,13 @@ Elements "visually nested" are related.
 Etc. 
 
 Weirdly enough, that is an easy thing to spot when we arrive on a webpage/an app: it can either feel "natural", or you can immediately see that something is off. 
-The hard thing is that it is something you spot when you are a new-comer: developing the app makes us so familiar with the app that we might miss when something is not used the way it is conventionally used^[
-For a good summary of these, see [The cranky user: The Principle of Least Astonishment](https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf)
+The hard thing is that it is something you spot when you are a new-comer: developing the app makes us so familiar with the app that we might miss when something is not used the way it is conventionally used
+^[For a good summary of these, see [The cranky user: The Principle of Least Astonishment](https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf)
 ].
 
 Let's exemplify this with the "Render" button from the [`{tidytuesday201942}`](https://connect.thinkr.fr/tidytuesday201942/) application. 
-This app is built on top of Bootstrap 4, which has no CSS class for `{shiny}` action button^[
-`{shiny}` is built on top of Bootstrap 3, and the action buttons are of class `btn-default`, which was removed in Bootstrap 4.
+This app is built on top of Bootstrap 4, which has no CSS class for `{shiny}` action button
+^[`{shiny}` is built on top of Bootstrap 3, and the action buttons are of class `btn-default`, which was removed in Bootstrap 4.
 ]. 
 Result: without any further CSS, the buttons do not come out as buttons, making it harder to decipher they are actually buttons. 
 Compare this native design:
@@ -405,8 +403,8 @@ Yet, dynamic is not always the solution, and for several reasons.
 
 Dynamic elements are slower to render than fixed one. 
 Most of the time (if not always), rendering dynamic elements means that you will bind some external libraries, and maybe you will have to make R convert data from one format to another.
-For example, rendering a `{ggplot2}` plot will be faster than rendering a `ggplotly()` plot, which has to convert from one format to another^[
-Well, maybe the native `{plotly}` [@plotly2018] implementation is faster, but you get the spirit.
+For example, rendering a `{ggplot2}` plot will be faster than rendering a `ggplotly()` plot, which has to convert from one format to another
+^[Well, maybe the native `{plotly}` [@plotly2018] implementation is faster, but you get the spirit.
 ].
 
 That being said, not all visualization libraries are created equal, and choosing interactive visualization will not automatically lead to poorer performance: just keep in mind that this can happen.
@@ -438,9 +436,8 @@ To sum up, a good rule to live by is that you should not add a feature for the s
 ### About Accessibility
 
 When building professional Shiny applications, you have to keep in mind that, potentially, this app will be consume by a large audience. 
-A large audience means that there is a chance that your app will be used by people with visual, mobility, or maybe cognitive disabilities^[
-And of course, other type of disabilities.
-]. 
+A large audience means that there is a chance that your app will be used by people with visual, mobility, or maybe cognitive disabilities
+^[And of course, other type of disabilities.]. 
 Web Accessibility deals with the process of making the web available to people with disabilities.
 
 > The Web is fundamentally designed to work for all people, whatever their hardware, software, language, location, or ability. When the Web meets this goal, it is accessible to people with a diverse range of hearing, movement, sight, and cognitive ability.
@@ -478,9 +475,8 @@ tags$article(
 ```
 
 One other HTML method you can use is tags attributes as metadata. 
-Tags attributes are complementary elements you can add to a tag to add information: most of the time, you will be using it to add a CSS class, and identifier, or maybe some events like `onclick`^[
-See the JavaScript chapter.
-].
+Tags attributes are complementary elements you can add to a tag to add information: most of the time, you will be using it to add a CSS class, and identifier, or maybe some events like `onclick`
+^[See the JavaScript chapter.].
 But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could not reach the resource, or because the person navigating the app is using a screen to speech technology. 
 
 ```{r 06-ux-matters-7, eval = FALSE}
