--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -20,8 +20,8 @@ Same thing: we're jumping straight into solving programming problem when someone
 
 Of course, implementing your own solution might be a good thing in specific cases: avoiding heavy dependencies, incompatible licensing, the joy of intellectual challenge... 
 But when building production software, it is safer to go for an existing solution if it exists and fits in the project: existing packages/software that are widely used by the community and by the industry benefit from wider testing, wider documentation, and a larger audience if you need to ask questions.
-And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow^[
-Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution. 
+And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow
+^[Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution. 
 ].
 
 So, before rushing into coding, take some time to conceptualize your application / module on a piece of paper. 
@@ -95,8 +95,8 @@ Will they be using the app in their office, on their phone while driving a tract
 
 That might seems like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need less interactive things, bigger fonts, simpler interface, less details and more direct information. 
 If you are building a Shiny app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile. 
-And developing for mobiles requires a different kind of mindset^[
-For developing an app that is mobile first, you can have a look at the great `{shinyMobile}` [@R-shinyMobile] package, made by the amazing Rinterface team.
+And developing for mobiles requires a different kind of mindset
+^[For developing an app that is mobile first, you can have a look at the great `{shinyMobile}` [@R-shinyMobile] package, made by the amazing Rinterface team.
 ].
 
 Another good reason why talking to the users is an important step is that most of the time, people writing specifications are not the end users and will ask either too much features or not enough. 
