--- a/10-prototyping.Rmd
+++ b/10-prototyping.Rmd
@@ -87,8 +87,8 @@ remotes::install_github("Thinkr-open/shinipsum")
 
 In this package, a series of functions that generates random placeholders. 
 For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements. 
-If we run this code two time, we should get different results^[
-Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
+If we run this code two time, we should get different results
+^[Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
 ]:
 
 ```{r 10-prototyping-2 }
