--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -42,8 +42,8 @@ Using unit tests is a way to secure your work in the future, be it for future yo
 The general idea is to detect bugs and breaking changes at the moment they are happening, not once it is too late.
 
 There are several packages in R that can be used to implement unit testing, and you can even implement your own tests. 
-One of the most popular right now^[
-Based on the number of Reverse dependencies & suggests at https://cran.r-project.org/web/packages/testthat/index.html
+One of the most popular right now
+^[Based on the number of Reverse dependencies & suggests at https://cran.r-project.org/web/packages/testthat/index.html
 ] is `{testthat}` [@R-testthat].
 This testing framework lets you write a series of tests and expectations, which are then launch when calling `test()` from `{devtools}` [@R-devtools], either locally or in you CI system. 
 
@@ -103,8 +103,8 @@ const puppeteer = require('puppeteer');
 ```
 
 Be aware though that this extension does not record everything, at least with the version used while writing this book (`0.7.1`). 
-For example, typing inside a text input is not recorded: that is completely doable inside `puppeteer`, yet not recorded by this extension^[
-See [puppeteer/issues/441](https://github.com/puppeteer/puppeteer/issues/441) for the code to set the text input values.
+For example, typing inside a text input is not recorded: that is completely doable inside `puppeteer`, yet not recorded by this extension
+^[See [puppeteer/issues/441](https://github.com/puppeteer/puppeteer/issues/441) for the code to set the text input values.
 ].
 
 Once you have this piece of code, put it into a NodeJS script, and replay the session as many time as you need.
