--- a/17-optimizing-shiny-code.Rmd
+++ b/17-optimizing-shiny-code.Rmd
@@ -20,16 +20,16 @@ In the rest of this chapter, we will be focusing on how to optimize Shiny specif
 Caching is the process of storing resources intensive results so that when they are needed again, your program can reuse the result another time without having to redo the computation again.
 
 How does it work? 
-Let's make a brief parallel with the human brain, and imagine that you know that you will need to use a phone number many time in the day, and for the purpose of this thought experiment you are completely unable to remember it^[
-Anyway, now that we all have smartphone, who still remembers phone numbers?
+Let's make a brief parallel with the human brain, and imagine that you know that you will need to use a phone number many time in the day, and for the purpose of this thought experiment you are completely unable to remember it
+^[Anyway, now that we all have smartphone, who still remembers phone numbers?
 ].
 What are you going to do? 
 There are two solutions here: either you look in the phone book or in your phone contact list every time you need it, which takes a couple of seconds every time, or you use a post-it that you put on your computer screen with the number of it, so that you have direct access to it when you need it. 
 It takes a couple of seconds the first time you look for the number, but it is almost instantaneous the next times you need it.
 
 This is what caching do: keep the result of computation so when they are needed in the very same context, they are quickly accessible.
-The downside being that you only have limited space on your screen: when your screen is covered by sticky notes, you can not store any more notes^[
-In that case, you can either hide pre-existing sticky notes, or buy a bigger screen. 
+The downside being that you only have limited space on your screen: when your screen is covered by sticky notes, you can not store any more notes
+^[In that case, you can either hide pre-existing sticky notes, or buy a bigger screen. 
 But we are not here to talk about cache management theory. 
 If you are interesting in reading more about caching theory, we suggest the excellent _Algorithms to Live By_, by Brian Christian and Tom Griffiths.
 ]. 
@@ -130,8 +130,8 @@ This function behaves more or less like the `renderPlot()` function, except that
 The extra arguments you will find are `cacheKeyExpr` and `sizePolicy`: the former is the list of inputs and values that allow to cache the plot—every time these values and inputs are the same, they produce the same graph, so `{shiny}` will be fetching inside the cache instead of computing the value another time. 
 `sizePolicy` is a function that returns a `width` and an `height`, and which are used to round the plot dimension in pixels, so that not every pixel combination are generated in the cache.
 
-The good news is that converting existing `renderPlot()` functions to `renderCachedPlot()` is pretty straightforward in most cases: take your current `renderPlot()`, and add the cache keys^[
-In some cases you will have to configure the size policy, but in most cases the default values work just well. 
+The good news is that converting existing `renderPlot()` functions to `renderCachedPlot()` is pretty straightforward in most cases: take your current `renderPlot()`, and add the cache keys
+^[In some cases you will have to configure the size policy, but in most cases the default values work just well. 
 ].
 
 Here is an example: 
@@ -258,8 +258,8 @@ Well, at least natively, as methods have emerged to run pieces of code in parall
 
 To launch code blocks in parallel, we will use a combination of two packages, `{future}` [@R-future] and `{promises}` [@R-promises], and a `reactiveValue()`. 
 `{future}` is an R package which main purpose is to allow users to send code to be run elsewhere, i.e in another session, thread, or even on another machine. 
-`{promises}`, on the other hand, is a package providing structure for handling asynchronous programming in R^[
-If you are familiar with promises in JavaScript, `{promises}` is an implementation of this structure into R.
+`{promises}`, on the other hand, is a package providing structure for handling asynchronous programming in R
+^[If you are familiar with promises in JavaScript, `{promises}` is an implementation of this structure into R.
 ].
 
 #### Asynchronous for Cross-sessions Availability
@@ -270,8 +270,8 @@ Natively, in Shiny, if user1 comes and launches a 15 second computation, then us
 
 With `{future}` and `{promises}`, each long computation is sent to be run somewhere else, so when user1 launches their 15 second computation, they are not blocking the R process for user2 and user3. 
 
-How does it work^[
-We're providing a short introduction with key concepts, but for a more thorough introduction, please refer to the [online documentation](https://rstudio.github.io/promises/index.html)
+How does it work
+^[We're providing a short introduction with key concepts, but for a more thorough introduction, please refer to the [online documentation](https://rstudio.github.io/promises/index.html)
 ]? 
 `{promises}` comes with two operators which will be useful in our case, `%...>%` and `%...!%`: the first being "what happens when the `future()` is solved?" (i.e. when the computation from the `future()` is completed), and the second is "what happens if the `future()` fails?" (i.e. what to do when the `future()` returns an error). 
 
