--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -44,8 +44,8 @@ The idea behind this being that repairing an aircraft should be possible for any
 This should be a principle to keep in mind when building application. 
 Indeed, large scale Shiny projects can lead to many people working on the code base, for a long period of time. 
 Many people means a variety of skills, with some common ground in Shiny development. 
-So when choosing how and what to implement, try to make a rule to go for the simplest solution^[
-Which might not be the most "elegant" solution, but production code requires pragmatism.
+So when choosing how and what to implement, try to make a rule to go for the simplest solution
+^[Which might not be the most "elegant" solution, but production code requires pragmatism.
 ], _i.e._ the one that any common Shiny Developer would be able to understand and maintain.  
 If you go for an exotic solution or a complex technology, be sure that you are doing it for a good reason: unknown or hard to grasp technology reduce the chance of finding someone that will be able to maintain that piece of code in the future. 
 
@@ -60,8 +60,8 @@ The choice of tools and organisation is crucial for a successful application.
 
 #### Version Control & Test all the things
 
-To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected^[
-Relying on automatic tooling for monitoring code base is way safer than relying on developers to do manual checks every time they commit code.
+To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected
+^[Relying on automatic tooling for monitoring code base is way safer than relying on developers to do manual checks every time they commit code.
 ].
 When you are working on a complex application, chances are that you will be working on it for a significant period of time, meaning that you will write code, modify it, use it, go back to it after a few weeks, change some other things, and probably break things. 
 Breaking things is a natural process of software engineering, notably when working on a piece of code during a long period.
