--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -6,7 +6,7 @@
 library(shiny)
 ```
 
-Building a robust, maintenable and shareable Shiny application will be made possible by building an R package.
+Building a robust, maintainable and shareable Shiny application will be made possible by building an R package.
 
 In the next chapter you will be introduced to the `{golem}` [@R-golem] package, which is __an opinionated framework for building production-ready Shiny Applications__—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.
 
