fixed typos in chapters 1 to 5

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -122,7 +122,7 @@ R is very permissive when it comes to indentation and line breaks, and, unlike J
 ^[The minification process is the process of removing all blank characters and put everything on one line so that the file in the output is much smaller.
 ].  
 In R, the number of lines of code depends on your coding style and the packages you are using. 
-For example, the `{tidyverse}` [@tidyverse2019] style guide encourages the use of `%>%` (called "pipe"), with one function by line, producing more lines in the end code : _"`%>%` should always have a space before it, and should usually be followed by a new line_" [tidyverse style guide](https://style.tidyverse.org/pipes.html){target="_blank"}.
+For example, the `{tidyverse}` [@tidyverse2019] style guide encourages the use of `%>%` (called "pipe"), with one function by line, producing more lines in the end code : "_`%>%` should always have a space before it, and should usually be followed by a new line_" [tidyverse style guide](https://style.tidyverse.org/pipes.html){target="_blank"}.
 So you can expect a "tidyverse-centric" package to contain more line of code, yet the pipe itself has been thought as a tool to lower code complexity by enhancing its readability^[Note though that some users find using the pipe more complex than not.].
 For example, the two following pieces of code do the same thing. 
 Both have a different number of lines, and a different level of reading complexity.
@@ -426,7 +426,7 @@ Just as before, accuracy means that between the moment the idea appears in someo
 
 ### It is usable
 
-being usable means that the app was delivered, it serves the purpose, and it is user-friendly. 
+Being usable means that the app was delivered, it serves the purpose, and it is user-friendly. 
 Unless you are coding for art sake, there will always be one or more end users. 
 And if these people cannot use the application because it is too hard to use, too hard to understand, because it is too slow or there is no inherent logic in how the user experience is designed, then it is inappropriate to call the app is a success. 
 
