--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -2,7 +2,7 @@
 
 Building a robust, production-ready web application will be made easier by following a given workflow. 
 The one we are advocating for is divided in five steps: Design, Prototype, Build, Strenghten and Deploy. 
-In this section, we will give an overview of the different steps of this workflow: the rest of the book will cover in more depth each of these steps. 
+In this section, we will give an overview of the different steps of this workflow: the rest of the book will cover each of these steps in more depth.
 
 ## Part 1: Design 
 
@@ -11,7 +11,7 @@ This first step of the process is the one that happens, before actually writing 
 
 This first step is not Shiny nor R specific, but something software engineers do for any software or web application: discuss with the clients, the end-users, and the developers who will work on the project. 
 
-During the process of designing, you will define how the application will be build: somewhere between users' dreams, what is technically possible, and the time you have to build the application.  
+During the process of designing, you will define how the application will be built: somewhere between users' dreams, what is technically possible, and the time you have to build the application.  
 
 ## Part 2: Prototype 
 
@@ -21,11 +21,11 @@ As you may know, a Shiny application is an interface (the front-end) used to com
 
 To start on solid ground, you need to build the two (front and back) seperately: 
 
-+ On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions.... everything that does not rely on computation on the back end. 
++ On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions, etc. everything that does not rely on computation on the back end. 
 This "UI first" approach will be made possible for Shiny with notably one package, `{shinipsum}` [@R-shinipsum], and tools like basic CSS, and some `{golem}` [@R-golem] functions.
 
 + On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work. 
-For this point, you can use what we call a "Rmd-first" approach, by combining R functions with the writing of Vignettes that describes the internal of the application. 
+For this point, you can use what we call a "Rmd-first" approach, by combining R functions with the writing of Vignettes that describes the internals of the application. 
 
 ## Part 3: Build 
 
