--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -82,7 +82,7 @@ As for any software in production, assuring the usability and sustainability of 
 
 #### Documenting your app
 
-Documentatin your Shiny app is explaining features to the end users, and also to the future developers (chances are it will be you).
+Documenting your Shiny app is explaining features to the end users, and also to the future developers (chances are it will be you).
 The good news is that using the R package structure helps you leverage the common tools for documentation in R:
 
 - A `README` file that you will put at the root of your package, which will document how to install the package, and some information about how to use the package.
@@ -107,7 +107,7 @@ __Nothing should go to production without being tested. Nothing.__
 
 Testing production apps is a wide question and we will come back to this question in another chapter, but let's talk briefly about why using a package structure helps with testing.
 
-Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the "Shiny App as a Package" strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like `{testthat}` [@R-testthat]. 
+Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the "Shiny App as a Package" structure, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like `{testthat}` [@R-testthat]. 
 Learning how to use it is not the subject of this chapter, so feel free to refer to the documentation, and see also Chapter 5 of the [workshop: "Building a package that lasts"](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop?slide=107). 
 
 We will come back to testing in the "Build Yourself a Safety Net" chapter.
@@ -210,7 +210,7 @@ Namespaces?
 
 Namespaces are a computer science concept which has been created to handle a common issue: how to share the same name for a variable in various places of your program without them conflicting. 
 In other words, how to use an object called `plop` several times in the program, and still be sure that it is correctly used depending on the context. 
-R itself has a system for namespaces ; this is what packages do and why you can have `purrr::flatten` and `jsonlite::flatten` on the same computer and inside the same script: the function names rethe same, but the two live in different namespaces, and the behavior of both functions can be totally different as the symbol is evaluated inside two different namespaces. 
+R itself has a system for namespaces ; this is what packages do and why you can have `purrr::flatten` and `jsonlite::flatten` on the same computer and inside the same script: the function names are the same, but the two live in different namespaces, and the behavior of both functions can be totally different as the symbol is evaluated inside two different namespaces. 
 If you want to learn more about namespaces, please refer to the [7.4 Special environments](https://adv-r.hadley.nz/environments.html#special-environments) chapter from _Advanced R_, or turn to any computer science book: namespaces are pretty common in any programming language.
 
 So, that is what modules are made for: creating small namespaces where you can safely define `ids` without conflicting with other ids in the app.  
@@ -275,7 +275,7 @@ Then, how do we refactor the partially repetitive piece of code so that it is re
 Yes, you guessed right: using shiny modules. 
 Shiny modules aim at three things: simplifying "id" namespacing, split the code base into a series of functions, and allow UI/Server parts of your app to be reused. 
 Most of the time, modules are used to do the two first.
-In our case, we could say that 90% of the module we write are never reused
+In our case, we could say that 90% of the modules we write are never reused
 ^[Most of the time, pieces / panels of the app are too unique to be reused elsewhere.
 ] ; they are here to allow us to split the code base into smaller, more manageable pieces. 
 
@@ -294,7 +294,7 @@ It is even easier if you are working with `{golem}`, which promotes the use of m
 Production apps almost always started as a small Proof Of Concept. 
 Then, the small PoC becomes an interesting idea. 
 Then, this idea becomes a strategical asset. 
-And before you know it, your 'not-that-fancy' app needs to become larger and largerr.
+And before you know it, your 'not-that-fancy' app needs to become larger and larger.
 So you will be better build solid foundations for your application from the very beginning.
 
 ### A practical walk through 
@@ -304,7 +304,7 @@ As an example is worth a thousand words, let's explore together the code of a ve
 #### Your first Shiny Module
 
 Let's try to transform the above example (the one with two sliders and two action buttons) into an application with a module.
-The module is small shiny application separated from the main code:
+The module is a small shiny application separated from the main code:
 
 ```{r 03-structure-6, eval = FALSE}
 # Re-usable module
@@ -742,7 +742,7 @@ Long scripts are almost always synonym of complexity when it comes to building a
 Of course, small and numerous scripts do not systematically prevent from codebase complexity but they simplify collaboration and maintenance, and divide the application logic into smaller, easier to understand bits of code. 
 
 So yes, big files are complex to handle and make development harder.
-Here is what happens when you work on a application for production:
+Here is what happens when you work on an application for production:
 
 + You will work during a long period of time (either in one run or split across several months) on your codebase. 
 Hence, you will have to get back to pieces of code you wrote a long time ago. 
